--- a/app/src/main/res/layout/fragment_list_info.xml
+++ b/app/src/main/res/layout/fragment_list_info.xml
@@ -4,7 +4,7 @@
     android:id="@+id/fragment_list_info"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".presentation.view.list.ListInfoFragment">
 
 
@@ -19,7 +19,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="218dp">
 
         <ImageView
@@ -79,7 +79,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="279dp">
 
         <ImageView
@@ -167,7 +167,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="363dp">
 
         <ImageView
@@ -206,7 +206,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="399dp">
 
         <ImageView
