--- a/app/src/main/res/layout/activity_note_live_chat.xml
+++ b/app/src/main/res/layout/activity_note_live_chat.xml
@@ -139,6 +139,7 @@
                 android:inputType="textMultiLine"
                 android:maxLines="4"
                 android:minLines="1"
+                android:maxHeight="10dp"
                 android:scrollbars="vertical"
                 android:overScrollMode="always" />
 
