--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -29,10 +29,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/community_detail_back_icon"
         app:layout_constraintBottom_toBottomOf="@id/community_detail_back_icon"/>
-    
+
     <ImageView
         android:id="@+id/community_detail_see_more"
-        android:layout_width="3dp"
+        android:layout_width="17dp"
         android:layout_height="14dp"
         android:src="@drawable/see_more_btn"
         android:layout_marginEnd="15dp"
@@ -234,15 +234,22 @@
         app:layout_constraintWidth_percent="1"/>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/community_detail_comment_view"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider2"
-        tools:listitem="@layout/item_comment" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/divider2">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/community_detail_comment_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider2"
+            tools:listitem="@layout/item_comment" />
+
+    </androidx.core.widget.NestedScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/community_detail_chatting_view"
