--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -46,7 +46,7 @@
             android:id="@+id/item_community_post_upload_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="몇분 전"
+            android:text="1분 전"
             android:textColor="@color/gray_scale7"
             style="@style/Caption1"
             android:layout_marginEnd="30dp"
