--- a/app/src/main/res/layout/activity_community_comment_edit.xml
+++ b/app/src/main/res/layout/activity_community_comment_edit.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/activity_community_comment_edit">
 
     <ImageView
         android:id="@+id/comment_edit_back_icon"
