--- a/app/src/main/res/layout/activity_list_information.xml
+++ b/app/src/main/res/layout/activity_list_information.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,186 +7,201 @@
     android:layout_height="match_parent"
     tools:context=".presentation.view.list.ListInformationActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/backbutton"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="21dp"
-                    android:layout_marginTop="24dp"
-                    android:src="@drawable/ic_back" />
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/backbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="21dp"
+                        android:layout_marginTop="24dp"
+                        android:src="@drawable/ic_back" />
+
+                    <TextView
+                        android:id="@+id/LocationName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="14dp"
+                        android:layout_marginTop="24dp"
+                        style="@style/Title1"
+                        android:textColor="@color/gray_scale8"
+                        android:text="서대문구청 전동보장구 급속충전기" />
+                </LinearLayout>
+
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="60dp"
+                    android:background="@color/gray_scale3"/>
 
                 <TextView
-                    android:id="@+id/LocationName"
+                    android:id="@+id/Distance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
-                    android:layout_marginTop="24dp"
-                    style="@style/Title1"
+                    android:layout_height="16dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="85dp"
+                    style="@style/Body4"
                     android:textColor="@color/gray_scale8"
-                    android:text="서대문구청 전동보장구 급속충전기" />
-            </LinearLayout>
+                    android:text="16m"/>
 
-            <TextView
-                android:id="@+id/Distance"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="94dp"
-                style="@style/Body4"
-                android:textColor="@color/gray_scale8"
-                android:text="16m"/>
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_marginStart="78dp"
+                    android:layout_marginTop="85dp"
+                    android:src="@drawable/ic_star" />
 
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_marginStart="78dp"
-                android:layout_marginTop="96dp"
-                android:src="@drawable/ic_star" />
-
-            <TextView
-                android:id="@+id/Grade"
-                android:layout_width="48dp"
-                android:layout_height="16dp"
-                android:layout_marginStart="96dp"
-                android:layout_marginTop="94dp"
-                style="@style/Body4"
-                android:textColor="@color/gray_scale8"
-                android:text="4.41(15)" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="138dp"
-                android:layout_marginBottom="47dp">
+                <TextView
+                    android:id="@+id/Grade"
+                    android:layout_width="48dp"
+                    android:layout_height="16dp"
+                    android:layout_marginStart="96dp"
+                    android:layout_marginTop="85dp"
+                    style="@style/Body4"
+                    android:textColor="@color/gray_scale8"
+                    android:text="4.41(15)" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginEnd="42dp"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="41dp"
-                        android:layout_height="41dp"
-                        android:src="@drawable/iv_call" />
-                    <TextView
+                    android:orientation="horizontal"
+                    android:layout_marginStart="35dp"
+                    android:layout_marginTop="138dp"
+                    android:layout_marginBottom="47dp">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        style="@style/Body3"
-                        android:textColor="@color/gray_scale8"
-                        android:text="전화" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:layout_marginEnd="42dp"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="41dp"
+                            android:layout_height="41dp"
+                            android:src="@drawable/iv_call" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            style="@style/Body3"
+                            android:textColor="@color/gray_scale8"
+                            android:text="전화" />
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginEnd="42dp"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="41dp"
-                        android:layout_height="41dp"
-                        android:src="@drawable/iv_bookmark" />
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        style="@style/Body3"
-                        android:textColor="@color/gray_scale8"
-                        android:text="즐겨찾기" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:layout_marginEnd="42dp"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="41dp"
+                            android:layout_height="41dp"
+                            android:src="@drawable/iv_bookmark" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            style="@style/Body3"
+                            android:textColor="@color/gray_scale8"
+                            android:text="즐겨찾기" />
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginEnd="42dp"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="41dp"
-                        android:layout_height="41dp"
-                        android:src="@drawable/iv_guide" />
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        style="@style/Body3"
-                        android:textColor="@color/gray_scale8"
-                        android:text="길안내" />
-                </LinearLayout>
+                        android:orientation="vertical"
+                        android:layout_marginEnd="42dp"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="41dp"
+                            android:layout_height="41dp"
+                            android:src="@drawable/iv_guide" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            style="@style/Body3"
+                            android:textColor="@color/gray_scale8"
+                            android:text="길안내" />
+                    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="41dp"
-                        android:layout_height="41dp"
-                        android:src="@drawable/iv_share" />
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        style="@style/Body3"
-                        android:textColor="@color/gray_scale8"
-                        android:text="공유" />
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <ImageView
+                            android:layout_width="41dp"
+                            android:layout_height="41dp"
+                            android:src="@drawable/iv_share" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            style="@style/Body3"
+                            android:textColor="@color/gray_scale8"
+                            android:text="공유" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="7dp"
-                android:layout_marginTop="219dp"
-                android:background="#E4E4E2"/>
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="7dp"
+                    android:layout_marginTop="219dp"
+                    android:background="#E4E4E2"/>
 
-            <!--탭 레이아웃-->
+                <!--탭 레이아웃-->
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/divider"
-                android:background="#F5F5F5"
-                android:theme="@style/TabTheme">
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabs"
+                <com.google.android.material.appbar.AppBarLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/divider"
                     android:background="#F5F5F5"
-                    app:tabIndicatorColor="#F37E13"
-                    app:tabIndicatorGravity="bottom"
-                    app:tabIndicatorHeight="2dp"
-                    app:tabMode="fixed"
-                    app:tabGravity="fill"
-                    app:tabIndicatorFullWidth="true" />
+                    android:theme="@style/TabTheme">
 
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/tabs"/>
-            </com.google.android.material.appbar.AppBarLayout>
-        </RelativeLayout>
-    </LinearLayout>
-</ScrollView>
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/divider"
+                        android:background="#F5F5F5"
+                        app:tabIndicatorColor="#F37E13"
+                        app:tabIndicatorGravity="bottom"
+                        app:tabIndicatorHeight="2dp"
+                        app:tabMode="fixed"
+                        app:tabGravity="fill"
+                        app:tabIndicatorFullWidth="true" />
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/viewPager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_below="@id/tabs"/>
+                </com.google.android.material.appbar.AppBarLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
