--- a/app/src/main/res/drawable/chat_bubble_background_receiver.xml
+++ b/app/src/main/res/drawable/chat_bubble_background_receiver.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFF4EB" /> <!-- 채팅 버블 색상 -->
+    <solid android:color="#F6F6F6" /> <!-- 채팅 버블 색상 -->
     <corners android:radius="8dp" /> <!-- 모서리 둥글게 -->
     <padding
         android:left="14dp"
