--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -65,6 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+
     <TextView
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
@@ -73,10 +74,27 @@
         android:layout_marginTop="16dp"
         style="@style/Caption2"
         android:textColor="@color/gray_scale7"
-        android:textSize="10sp"
+
         android:text="시간"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+
+    <TextView
+        android:id="@+id/unreadTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/ic_unread"
+        style="@style/Caption1"
+        android:textColor="#FFFFFF"
+        android:text="1"
+        android:gravity="center"
+        android:layout_marginTop="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timeTextView" />
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -122,7 +140,10 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="16dp"
             android:text="채팅 내용"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:maxLines="1"
+            android:maxEms="30"
+            android:ellipsize="end"/>
         </LinearLayout>
 
 
