--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -328,7 +328,7 @@
             android:layout_height="28dp"
             android:src="@drawable/icon_send"
             android:contentDescription="Send"
-            android:layout_marginEnd="10dp"
+            app:layout_constraintStart_toEndOf="@id/message_input"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
