--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -155,6 +155,7 @@
                     style="@style/Body2"
                     android:textColor="@color/gray_scale8"
                     android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
                     app:layout_constraintTop_toBottomOf="@id/community_detail_title"
                     app:layout_constraintStart_toStartOf="parent"/>
             </LinearLayout>
