--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -82,6 +82,7 @@
             android:orientation="vertical"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintTop_toBottomOf="@id/item_community_post_category_view"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -100,6 +101,7 @@
                 style="@style/Body2"
                 android:textColor="@color/gray_scale8"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintTop_toBottomOf="@id/item_community_post_title"
                 app:layout_constraintStart_toStartOf="parent"/>
         </LinearLayout>
